<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/scrollview"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="86dp"
            android:layout_marginTop="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_digikala" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:fontFamily="@font/main_font_bold"
            android:text="@string/title_login"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/main_font"
            android:text="@string/description_login"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:fontFamily="@font/main_font"
            android:gravity="start"
            android:hint="@string/user_name_hint"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:fontFamily="@font/main_font"
            android:gravity="start"
            android:hint="@string/password_hint"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="@+id/editTextName"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="363dp"
            android:layout_height="56dp"
            android:fontFamily="@font/main_font_bold"
            android:text="@string/button_text"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/checkBoxSaveInfo"
            app:layout_constraintStart_toStartOf="@+id/editTextPass"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSaveInfo" />

        <CheckBox
            android:id="@+id/checkBoxSaveInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/save_info"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/editTextPass"
            app:layout_constraintTop_toBottomOf="@+id/editTextPass" />

        <FrameLayout
            android:id="@+id/frameShowPass"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPass"
            app:layout_constraintEnd_toEndOf="@+id/editTextPass"
            app:layout_constraintTop_toBottomOf="@+id/editTextName">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconShowPass"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/ic_show_pass" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>